changed background image url to be relative

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -6,7 +6,7 @@
 }
 
 header{
-    background-image: url("C:/Users/randy/Downloads/concert_performance_light_organ_137789_3840x2160.jpg");
+    background-image: url("../img/concert_performance_light_organ_137789_3840x2160.jpg");
     background-repeat: no-repeat;
     background-size: 100% 100%;
     height: 90vh;
