--- a/assets/css/type.css
+++ b/assets/css/type.css
@@ -110,6 +110,7 @@ nav #account{
     padding: 2vh 2vw;
     background-color: rgb(255, 255, 255);
     border-bottom: 1px solid rgba(0, 0, 0, 0.616);
+    cursor: pointer;
 }
 
 
