--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -13,6 +13,12 @@ header{
     color: white;
 }
 
+#logo{
+    height: 6vh;
+    object-fit: contain;
+    margin: 0 2vw;
+}
+
 #nav{
     display: flex;
     flex-direction: row;
