--- a/assets/css/type.css
+++ b/assets/css/type.css
@@ -29,6 +29,12 @@ header{
 
 }
 
+#logo{
+    height: 6vh;
+    object-fit: contain;
+    margin: 0 2vw;
+}
+
 header nav{
     display: flex;
     flex-direction: row;
