added pointer cursor for button in event.html

--- a/assets/css/event.css
+++ b/assets/css/event.css
@@ -212,6 +212,7 @@ nav #account{
     display: flex;
     justify-content: center;
     align-items: center;
+    cursor: pointer;
 }
 
 .event-list{
